--- a/ML-WORKSPACE/1st_edd_mini.ipynb
+++ b/ML-WORKSPACE/1st_edd_mini.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[3268 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
        "[643 rows x 8 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        "[2625 rows x 8 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "Name: count, Length: 1138, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,126 +1216,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Product Name     393\n",
-      "Product ID       393\n",
-      "Listing Price    393\n",
-      "Sale Price       393\n",
-      "Discount         393\n",
-      "Brand            393\n",
-      "Rating           393\n",
-      "Reviews          393\n",
-      "dtype: int64\n",
-      "2625               Nike Air Force 1 '07 Essential\n",
-      "2626                         Nike Air Force 1 '07\n",
-      "2627                 Nike Air Force 1 Sage Low LX\n",
-      "2628                          Nike Air Max Dia SE\n",
-      "2629                          Nike Air Max Verona\n",
+      "2633                    nike zoom pegasus turbo 2\n",
+      "2634                   nike air max 270 react eng\n",
+      "2635                              nike air max 90\n",
+      "2639                  nike air vapormax flyknit 3\n",
+      "2640                       nike air zoom superrep\n",
       "                          ...                    \n",
-      "3254              Nike Mercurial Vapor 13 Club MG\n",
-      "3255    Nike Zoom Pegasus Turbo 2 Special Edition\n",
-      "3260              Nike Tiempo Legend 8 Academy TF\n",
-      "3263                           Air Jordan 8 Retro\n",
-      "3267                               Nike P-6000 SE\n",
-      "Name: Product Name, Length: 393, dtype: object\n"
+      "3235             nike air zoom pegasus 36 flyease\n",
+      "3237                       nike p-6000 icon clash\n",
+      "3244                           nike pre-love o.x.\n",
+      "3255    nike zoom pegasus turbo 2 special edition\n",
+      "3263                           air jordan 8 retro\n",
+      "Name: Product Name, Length: 250, dtype: object\n"
      ]
     }
    ],
    "source": [
     "# 나이키 신발 제품명 중복값 제거\n",
     "nike_drop_duplicated = nike.drop_duplicates(subset=['Product Name'], keep='first')\n",
+    "nike_drop_duplicated = nike_drop_duplicated[nike_drop_duplicated['Rating'] > 1]\n",
     "\n",
-    "# 나이키 신발 제품수 393개 (남녀 포함)\n",
-    "print(nike_drop_duplicated.count())\n",
+    "# 나이키 신발 제품수 393개\n",
+    "# print(nike_drop_duplicated.count())\n",
     "\n",
-    "# 나이키 신발 제품명 (남녀 포함)\n",
+    "# 나이키 신발 전체 소문자로 변경\n",
+    "def trans_small(text):\n",
+    "        words = text.split()\n",
+    "        return ' '.join(words[:]).lower()  # 성별 표시 제거\n",
+    "nike_drop_duplicated['Product Name'] = nike_drop_duplicated['Product Name'].apply(trans_small)\n",
+    "\n",
+    "# 나이키 신발 제품명\n",
     "print(nike_drop_duplicated['Product Name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Product Name     1138\n",
-      "Product ID       1138\n",
-      "Listing Price    1138\n",
-      "Sale Price       1138\n",
-      "Discount         1138\n",
-      "Brand            1138\n",
-      "Rating           1138\n",
-      "Reviews          1138\n",
-      "dtype: int64\n",
-      "0       Women's adidas Originals NMD_Racer Primeknit S...\n",
-      "1                    Women's adidas Originals Sleek Shoes\n",
-      "2                       Women's adidas Swim Puka Slippers\n",
-      "3        Women's adidas Sport Inspired Questar Ride Shoes\n",
-      "4                Women's adidas Originals Taekwondo Shoes\n",
-      "                              ...                        \n",
-      "2617    Men's adidas Running Ultraboost 19 Star Wars S...\n",
-      "2619                         Men's Cricket 22 Yards Shoes\n",
-      "2620                Men's adidas Adipower Vector 20 Shoes\n",
-      "2621                    Men's adidas Cricket Howzat Shoes\n",
-      "2623      Unisex adidas Outdoor Terrex Daroga Water Shoes\n",
-      "Name: Product Name, Length: 1138, dtype: object\n"
+      "0      adidas originals nmd_racer primeknit shoes\n",
+      "1                    adidas originals sleek shoes\n",
+      "2                       adidas swim puka slippers\n",
+      "3        adidas sport inspired questar ride shoes\n",
+      "4                adidas originals taekwondo shoes\n",
+      "                          ...                    \n",
+      "519                       originals kiellor shoes\n",
+      "521            adidas originals sl andridge shoes\n",
+      "528                         originals sleek shoes\n",
+      "534                       originals gazelle shoes\n",
+      "536                  adidas running lace it shoes\n",
+      "Name: Product Name, Length: 250, dtype: object\n"
      ]
     }
    ],
    "source": [
     "# 아디다스 신발 제품명 중복값 제거\n",
     "adidas_drop_duplicated = adidas.drop_duplicates(subset=['Product Name'], keep='first')\n",
+    "adidas_drop_duplicated = adidas_drop_duplicated[adidas_drop_duplicated['Rating'] > 1].head(250)\n",
     "\n",
     "# 아디다스 신발 제품수 1138개 (남녀 포함)\n",
-    "print(adidas_drop_duplicated.count())\n",
+    "# print(adidas_drop_duplicated.count())\n",
     "\n",
     "# 아디다스 신발 제품명 (남녀 포함)\n",
-    "print(adidas_drop_duplicated['Product Name'])"
+    "# print(adidas_drop_duplicated['Product Name'])\n",
+    "\n",
+    "# 아디다스 신발 제품명 (남녀 제외)\n",
+    "adidas_noSex = adidas_drop_duplicated\n",
+    "def remove_sex(text):\n",
+    "        words = text.split()\n",
+    "        if any(gender in words[0].upper() for gender in [\"WOMEN'S\", \"MEN'S\", \"UNISEX\"]):\n",
+    "            return ' '.join(words[1:]).lower()  # 성별 표시 제거\n",
+    "\n",
+    "# DataFrame의 'Product Name' 열에 적용\n",
+    "adidas_noSex['Product Name'] = adidas_noSex['Product Name'].apply(remove_sex)\n",
+    "\n",
+    "print(adidas_noSex['Product Name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "총 나이키 제품 수: 643 개\n",
-      "0을 제외한 나이키 리뷰 수: 315 (결측치: 328)\n",
-      "0을 제외한 나이키 레이팅 수: 408 (결측치: 235)\n",
+      "총 나이키 제품 수: 250 개\n",
+      "0을 제외한 나이키 리뷰 수: 194 (결측치: 56)\n",
+      "0을 제외한 나이키 레이팅 수: 250 (결측치: 0)\n",
+      "0을 제외한 나이키 리뷰&레이팅 수: 194 (결측치: 56)\n",
       "\n",
-      "총 아디다스 제품 수: 643 개\n",
-      "0을 제외한 아디다스 리뷰 수: 2565 (결측치: 60)\n",
-      "0을 제외한 아디다스 레이팅 수: 2457 (결측치: 168)\n"
+      "총 아디다스 제품 수: 250 개\n",
+      "0을 제외한 아디다스 리뷰 수: 245 (결측치: 5)\n",
+      "0을 제외한 아디다스 레이팅 수: 250 (결측치: 0)\n"
      ]
     }
    ],
    "source": [
     "# print(pd.DataFrame(nike))\n",
-    "nike_num = len(df[df['Brand'] == 'Nike'])\n",
+    "nike_num = nike_drop_duplicated['Reviews'].count()\n",
     "print(f'총 나이키 제품 수: {nike_num} 개')\n",
-    "nike_review = nike[nike['Reviews'] > 1]['Brand'].count()\n",
+    "nike_review = nike_drop_duplicated[nike_drop_duplicated['Reviews'] > 1]['Brand'].count()\n",
     "print(f\"0을 제외한 나이키 리뷰 수: {nike_review} (결측치: {nike_num - nike_review})\")\n",
-    "nike_rating = nike[nike['Rating'] > 1]['Brand'].count()\n",
+    "nike_rating = nike_drop_duplicated[nike_drop_duplicated['Rating'] > 1]['Brand'].count()\n",
     "print(f\"0을 제외한 나이키 레이팅 수: {nike_rating} (결측치: {nike_num - nike_rating})\")\n",
+    "nike_rr = nike_drop_duplicated[(nike_drop_duplicated['Rating'] > 1 ) & (nike_drop_duplicated['Reviews'] > 1) ]['Brand'].count()\n",
+    "print(f\"0을 제외한 나이키 리뷰&레이팅 수: {nike_rr} (결측치: {nike_num - nike_rr})\")\n",
     "print()\n",
     "\n",
-    "adidas_num = len(df[df['Brand'].str.contains('Adidas')])\n",
-    "print(f'총 아디다스 제품 수: {nike_num} 개')\n",
-    "adidas_review = adidas[adidas['Reviews'] > 1]['Brand'].count()\n",
+    "adidas_num = adidas_drop_duplicated['Reviews'].count()\n",
+    "print(f'총 아디다스 제품 수: {adidas_num} 개')\n",
+    "adidas_review = adidas_drop_duplicated[adidas_drop_duplicated['Reviews'] > 1]['Brand'].count()\n",
     "print(f\"0을 제외한 아디다스 리뷰 수: {adidas_review} (결측치: {adidas_num - adidas_review})\")\n",
-    "adidas_rating = adidas[adidas['Rating'] > 1]['Brand'].count()\n",
+    "adidas_rating = adidas_drop_duplicated[adidas_drop_duplicated['Rating'] > 1]['Brand'].count()\n",
     "print(f\"0을 제외한 아디다스 레이팅 수: {adidas_rating} (결측치: {adidas_num - adidas_rating})\")"
    ]
   }
