--- a/data-analysis-practice/2_titanic_practice.ipynb
+++ b/data-analysis-practice/2_titanic_practice.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -325,117 +325,515 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Age                                  Name\n",
-      "630  80.0  Barkworth, Mr. Algernon Henry Wilson\n",
-      "     Survived  Pclass\n",
-      "0           0       3\n",
-      "1           1       1\n",
-      "2           1       3\n",
-      "3           1       1\n",
-      "4           0       3\n",
-      "..        ...     ...\n",
-      "886         0       2\n",
-      "887         1       1\n",
-      "888         0       3\n",
-      "889         1       1\n",
-      "890         0       3\n",
-      "\n",
-      "[891 rows x 2 columns]\n"
+      "Pclass\n",
+      "1    35.37\n",
+      "2    25.90\n",
+      "3    20.65\n",
+      "Name: Age, dtype: float64\n",
+      "Pclass\n",
+      "1    43.70\n",
+      "2    33.54\n",
+      "3    26.56\n",
+      "Name: Age, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "# 1. 생존자(Survived)와 그렇지 않은 사람들의 `Pclass`(객실 등급)별 평균 나이를 각각 출력\n",
-    "print(df.loc[df['Age'] == df[\"Age\"].max(), ['Age', 'Name']])\n",
-    "print(df[['Survived', 'Pclass']])"
+    "avg_age = df.groupby(['Survived', 'Pclass'])['Age'].mean()\n",
+    "\n",
+    "print(avg_age[1].round(2))\n",
+    "print(avg_age[0].round(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Fortune, Mr. Charles Alexander</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>Fortune, Miss. Mabel Helen</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>Fortune, Miss. Alice Elizabeth</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Sage, Master. Thomas Henry</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>Sage, Miss. Constance Gladys</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Name   Age\n",
+       "27   Fortune, Mr. Charles Alexander  19.0\n",
+       "88       Fortune, Miss. Mabel Helen  23.0\n",
+       "341  Fortune, Miss. Alice Elizabeth  24.0\n",
+       "159      Sage, Master. Thomas Henry   NaN\n",
+       "180    Sage, Miss. Constance Gladys   NaN"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2. `SibSp`(형제/배우자 수)가 3 이상인 승객들 중에서, `Fare`(운임) 상위 5명의 이름과 나이를 출력"
+    "# 2. `SibSp`(형제/배우자 수)가 3 이상인 승객들 중에서, `Fare`(운임) 상위 5명의 이름과 나이를 출력\n",
+    "df[df['SibSp'] >= 3].sort_values('Fare', ascending=False)[['Name', 'Age']].head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Embarked\n",
+       "S    90\n",
+       "Q    49\n",
+       "C    38\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3. 승객 중에서 `Age` 값이 결측치(NaN)인 사람들의 `Embarked`(탑승 항구)별 분포를 출력"
+    "# 3. 승객 중에서 `Age` 값이 결측치(NaN)인 사람들의 `Embarked`(탑승 항구)별 분포를 출력\n",
+    "df[df['Age'].isna()]['Embarked'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Vestrom, Miss. Hulda Amanda Adolfina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>McGowan, Miss. Anna \"Annie\"</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>731</th>\n",
+       "      <td>Hassan, Mr. Houssein G N</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>Emanuel, Miss. Virginia Ethel</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>780</th>\n",
+       "      <td>Ayoub, Miss. Banoura</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>875</th>\n",
+       "      <td>Najib, Miss. Adele Kiamie \"Jane\"</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Name     Sex  Survived\n",
+       "14   Vestrom, Miss. Hulda Amanda Adolfina  female         0\n",
+       "22            McGowan, Miss. Anna \"Annie\"  female         1\n",
+       "731              Hassan, Mr. Houssein G N    male         0\n",
+       "777         Emanuel, Miss. Virginia Ethel  female         1\n",
+       "780                  Ayoub, Miss. Banoura  female         1\n",
+       "875      Najib, Miss. Adele Kiamie \"Jane\"  female         1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4. 나이가 16세 미만이고, 혼자 탑승한(`SibSp == 0` and `Parch == 0`) 승객의 이름과 성별, 생존 여부를 출력"
+    "# 4. 나이가 16세 미만이고, 혼자 탑승한(`SibSp == 0` and `Parch == 0`) 승객의 이름과 성별, 생존 여부를 출력\n",
+    "df[(df['Age'] < 16) & (df['SibSp'] == 0) & (df['Parch'] == 0)][['Name', 'Sex', 'Survived']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>53.1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>McCarthy, Mr. Timothy J</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>51.8625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Sloper, Mr. William Thompson</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>35.5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Fortune, Mr. Charles Alexander</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>853</th>\n",
+       "      <td>Lines, Miss. Mary Conover</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>39.4000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>856</th>\n",
+       "      <td>Wick, Mrs. George Dennick (Mary Hitchcock)</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>164.8667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>867</th>\n",
+       "      <td>Roebling, Mr. Washington Augustus II</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>50.4958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>871</th>\n",
+       "      <td>Beckwith, Mrs. Richard Leonard (Sallie Monypeny)</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>52.5542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>879</th>\n",
+       "      <td>Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>83.1583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>159 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Name   Age      Fare\n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  38.0   71.2833\n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  35.0   53.1000\n",
+       "6                              McCarthy, Mr. Timothy J  54.0   51.8625\n",
+       "23                        Sloper, Mr. William Thompson  28.0   35.5000\n",
+       "27                      Fortune, Mr. Charles Alexander  19.0  263.0000\n",
+       "..                                                 ...   ...       ...\n",
+       "853                          Lines, Miss. Mary Conover  16.0   39.4000\n",
+       "856         Wick, Mrs. George Dennick (Mary Hitchcock)  45.0  164.8667\n",
+       "867               Roebling, Mr. Washington Augustus II  31.0   50.4958\n",
+       "871   Beckwith, Mrs. Richard Leonard (Sallie Monypeny)  47.0   52.5542\n",
+       "879      Potter, Mrs. Thomas Jr (Lily Alexenia Wilson)  56.0   83.1583\n",
+       "\n",
+       "[159 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 5. 1등급(Pclass == 1) 객실에 탑승한 승객들 중에서, 운임(Fare)이 평균보다 높은 사람들의 이름과 나이, 운임을 출력"
+    "# 5. 1등급(Pclass == 1) 객실에 탑승한 승객들 중에서, 운임(Fare)이 평균보다 높은 사람들의 이름과 나이, 운임을 출력\n",
+    "df[(df['Pclass'] == 1) & (df['Fare'] > df['Fare'].mean())][['Name', 'Age', 'Fare']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>87.961582</td>\n",
+       "      <td>69.3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.471556</td>\n",
+       "      <td>15.0458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.229435</td>\n",
+       "      <td>8.0500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mean   median\n",
+       "Pclass                    \n",
+       "1       87.961582  69.3000\n",
+       "2       21.471556  15.0458\n",
+       "3       13.229435   8.0500"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 6. 나이(Age), 객실 등급(Pclass), 운임(Fare) 값에 결측치가 없는 승객들만 대상으로, 각 등급별 평균 운임과 중앙값 운임을 출력"
+    "# 6. 나이(Age), 객실 등급(Pclass), 운임(Fare) 값에 결측치가 없는 승객들만 대상으로, 각 등급별 평균 운임과 중앙값 운임을 출력\n",
+    "clean_df = df[df['Age'].notna() & df['Pclass'].notna() & df['Fare'].notna()]\n",
+    "clean_df.groupby('Pclass')['Fare'].agg(['mean', 'median'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embarked\n",
+      "C    30.814769\n",
+      "Q    28.089286\n",
+      "S    29.445397\n",
+      "Name: Age, dtype: float64\n",
+      "0.34\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7. 승객들의 `Embarked` 별 평균 나이를 계산하고, 가장 많은 승객이 탑승한 항구를 기준으로 생존율을 계산하여 출력"
+    "# 7. 승객들의 `Embarked` 별 평균 나이를 계산하고, 가장 많은 승객이 탑승한 항구를 기준으로 생존율을 계산하여 출력\n",
+    "\n",
+    "print(df.groupby('Embarked')['Age'].mean())\n",
+    "print(round(df[df['Embarked'] == df['Embarked'].mode()[0]]['Survived'].mean(), 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.81\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8. 승객 중에서 여성(`Sex == 'female'`)이면서 30세 이상인 사람들의 생존율을 계산하여 출력"
+    "# 8. 승객 중에서 여성(`Sex == 'female'`)이면서 30세 이상인 사람들의 생존율을 계산하여 출력\n",
+    "print(round(df[(df['Sex'] == 'female') & (df['Age'] >= 30)]['Survived'].mean(), 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.34\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9. 동반한 형제 또는 배우자 수(`SibSp`)와 부모 또는 자녀 수(`Parch`)의 합이 3 이상인 승객들만을 대상으로, 그들의 생존율을 계산하여 출력"
+    "# 9. 동반한 형제 또는 배우자 수(`SibSp`)와 부모 또는 자녀 수(`Parch`)의 합이 3 이상인 승객들만을 대상으로, 그들의 생존율을 계산하여 출력\n",
+    "print(round(df[((df['SibSp'] + df['Parch']) >= 3)]['Survived'].mean(), 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass\n",
+      "1    0.66\n",
+      "2    0.81\n",
+      "3    0.50\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# 10. `Cabin`(객실 번호) 정보가 있는 승객들만을 대상으로, 그들의 생존율을 객실 등급별로 구분하여 계산하여 출력"
+    "# 10. `Cabin`(객실 번호) 정보가 있는 승객들만을 대상으로, 그들의 생존율을 객실 등급별로 구분하여 계산하여 출력\n",
+    "print(round(df[df['Cabin'].notna()].groupby('Pclass')['Survived'].mean(), 2))"
    ]
   }
  ],
