--- a/ML-WORKSPACE/04_classification/02_decision_tree.ipynb
+++ b/ML-WORKSPACE/04_classification/02_decision_tree.ipynb
@@ -666,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
