--- a/ML-WORKSPACE/04_classification/01_logistic_regression.ipynb
+++ b/ML-WORKSPACE/04_classification/01_logistic_regression.ipynb
@@ -945,7 +945,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -959,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
