--- a/ML-WORKSPACE/2nd_edd_mini_marge_lgtm.ipynb
+++ b/ML-WORKSPACE/2nd_edd_mini_marge_lgtm.ipynb
@@ -3591,7 +3591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
